--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -47,7 +47,7 @@
         <div class="dropdown">
           <button class="dropbtn"> CUENTA</button>
           <div class="dropdown-content">
-            <a href="../static/profile.html"> MI PERFIL </a>
+            <a href="/profile"> MI PERFIL </a>
             <a href="/registration">REGISTRARSE</a>
           </div>
         </div>
